Added Practica5_P1 comments and implementation.

--- a/Practica5_P1/Debug/makefile
+++ b/Practica5_P1/Debug/makefile
@@ -39,34 +39,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := Practica5
+BUILD_ARTIFACT_NAME := Practica5_P1
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-Practica5.elf \
+Practica5_P1.elf \
 
 MAP_FILES += \
-Practica5.map \
+Practica5_P1.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-Practica5.list \
+Practica5_P1.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: Practica5.elf secondary-outputs
+main-build: Practica5_P1.elf secondary-outputs
 
 # Tool invocations
-Practica5.elf Practica5.map: $(OBJS) $(USER_OBJS) /home/marco/Documents/Dev/PdM/PdM_workspace/Practica5/STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Practica5.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/marco/Documents/Dev/PdM/PdM_workspace/Practica5/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica5.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Practica5_P1.elf Practica5_P1.map: $(OBJS) $(USER_OBJS) /home/marco/Documents/Dev/PdM/PdM_workspace/Practica5_P1/STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Practica5_P1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/marco/Documents/Dev/PdM/PdM_workspace/Practica5_P1/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica5_P1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -75,14 +75,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-Practica5.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Practica5.list"
+Practica5_P1.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Practica5_P1.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) Practica5.elf Practica5.list Practica5.map default.size.stdout
+	-$(RM) Practica5_P1.elf Practica5_P1.list Practica5_P1.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
